--- a/tron-walletconnect-app/src/components/Navbar/Navbar.css
+++ b/tron-walletconnect-app/src/components/Navbar/Navbar.css
@@ -160,6 +160,7 @@
   }
 
   .navbar-logo {
+    height: auto;
     max-width: 100px;
   }
 }
